# AIDI2004_Personalized_music_recommendation

./: .gitignore  README.md  app.py  notes.md  pyproject.toml  temp.py
backend/: .cache  app.py  groq_utils.py  spotify_utils.py
frontend/: streamlit_app.py
templates/: index.html
